Aggiornate le versioni di alcune dipendenze indicate nel pom e risolti alcuni problemi di generazione del jar con le dipendenze. Modificato il README file rimuovendo le informazioni non più necessarie e aggiungendo quelle relative alle ultime modifiche. Aggiunta documentazione in formato modificabile. Generata nuova documentazione html con piccole correzioni e l'aggiunta di nuove classi e metodi.