@@ -1,46 +1,49 @@
-# 🇮🇹
-# 📒 Rubrica per PC
-### Università degli Studi di Salerno (UNISA)
-**Corso di Ingegneria Informatica**
-**Gruppo 02 - Progetto Universitario**
+# 📒 Rubrica per PC  
+### Università degli Studi di Salerno (UNISA)  
+**Corso di Ingegneria Informatica**  
+**Gruppo 02 - Progetto Universitario**  
 
 ---
 
-## 🚀 Descrizione del Progetto
-Questo progetto consiste nello sviluppo di un'applicazione per PC dedicata alla gestione di una rubrica. L'obiettivo è fornire uno strumento intuitivo e funzionale che consenta agli utenti di salvare, organizzare e ricercare facilmente i contatti.
+## 🚀 Descrizione del Progetto  
+Questo progetto consiste nello sviluppo di un'applicazione desktop dedicata alla gestione di una rubrica. L'obiettivo è fornire uno strumento intuitivo e funzionale che consenta agli utenti di salvare, organizzare e ricercare facilmente i contatti.  
 
-## 📋 Funzionalità Principali
-- **Registrazione e Login:** Accesso sicuro con credenziali utente.
-- **Gestione Contatti:** Aggiunta, modifica, eliminazione e visualizzazione dei contatti.
-- **Ricerca Avanzata:** Filtri personalizzati per trovare rapidamente i contatti.
-- **Esportazione/Importazione:** Salvataggio dei contatti in formati standard (es. CSV).
+## 📋 Funzionalità Principali  
+- **Registrazione e Login:** Accesso sicuro con credenziali utente.  
+- **Gestione Contatti:** Aggiunta, modifica, eliminazione e visualizzazione dei contatti.  
+- **Ricerca Avanzata:** Filtri personalizzati per trovare rapidamente i contatti.  
+- **Esportazione/Importazione:** Salvataggio dei contatti in formati standard (es. CSV).  
+- **Interfaccia User-Friendly:** Utilizzo di JavaFX per un'esperienza utente moderna e accattivante.  
 
-## 🛠️ Tecnologie Utilizzate
-- **Linguaggio di Programmazione:** Java
-- **Database:** PostgreSQL
-- **Framework e Librerie:** JavaFx
-- **Strumenti di Versionamento:** Git/GitHub
+## 🛠️ Tecnologie Utilizzate  
+- **Linguaggio di Programmazione:** Java  
+- **Database:** PostgreSQL  
+- **Framework e Librerie:** JavaFX  
+- **Strumenti di Versionamento:** Git/GitHub  
+- **Gestione del Progetto:** MAVEN  
+- **IDE Utilizzato:** NetBeans 23  
 
-## 👥 Team di Sviluppo
-Il progetto è stato realizzato dal Gruppo 02, composto da 4 studenti del corso di Ingegneria Informatica presso l'Università degli Studi di Salerno (UNISA):
+## 👥 Team di Sviluppo  
+Il progetto è stato realizzato dal **Gruppo 02**, composto da 4 studenti del corso di Ingegneria Informatica presso l'Università degli Studi di Salerno (UNISA):  
 
-- **Postiglione Vittorio**
-- **Quaranta Valeria**
-- **Sanzari Mattia**
-- **Zouhri Anuar**
+- **Postiglione Vittorio**  
+- **Quaranta Valeria**  
+- **Sanzari Mattia**  
+- **Zouhri Anuar**  
 
-## 📦 Installazione
+## 📦 Installazione  
 
-**Clonare il repository:**
+### **Clonare il repository:**  
+```bash  
+git clone https://github.com/CupoMeridio/Ingegneria-del-software-2024-2025.git  
+```  
 
-```bash
-git clone https://github.com/CupoMeridio/Ingegneria-del-software-2024-2025.git
-```
-**Configurare il database:**
-L'applicazione utilizza un database online tramite i servizi offerti da https://aiven.io, pertanto non è necessario configurare un database locale.<br />
+### **Configurare il database:**  
+L'applicazione utilizza un database online tramite i servizi offerti da [Aiven](https://aiven.io), pertanto non è necessario configurare un database locale.  
 
-## Comando per aprire il programma
-Aprire il terminale nella cartella del progetto e digitare
-```
-java --module-path javafx-sdk-23.0.1\lib --add-modules javafx.controls,javafx.fxml -jar target/Rubrica_progetto_IDS-1.0-SNAPSHOT.jar
-```
+### **Compilare ed eseguire il progetto:**  
+Aprire il progetto in NetBeans 23. MAVEN gestirà automaticamente le dipendenze.  
+
+### **File eseguibile disponibile:**  
+Nel repository è disponibile anche un file JAR eseguibile. Per eseguirlo è necessario scaricare ed installare l'ambiente Java. Puoi scaricarlo dal seguente link: [Java Downloads | Oracle](https://www.oracle.com/java/technologies/javase-downloads.html).  
+
